[package]
name = "code_gen"
version = "0.1.0"
authors = ["Paul Lane <paul.lane083@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = {path = "../ast"}
output_manager = {path = "../output_manager"}
semantic_analyzer = {path = "../semantic_analyzer"}
log = "0.4.13"
