[package]
name = "driver"
version = "0.1.0"
authors = ["Paul Lane <paul.lane083@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path = {path = "../path"}
output_manager = {path = "../output_manager"}
syntactic_analyzer = {path = "../syntactic_analyzer"}
lexical_analyzer = {path = "../lexical_analyzer"}
semantic_analyzer = {path = "../semantic_analyzer"}
clap = {version = "~2.27.0", features = ["yaml"]}
simplelog = "0.9.0"
log = "0.4.13"
