[package]
name = "semantic_analyzer"
version = "0.1.0"
authors = ["Paul Lane <paul.lane083@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = {path = "../ast"}
lazy_static = "1.4.0"
derive-getters = "0.2.0"
log = "0.4.13"
